@@ -105,6 +105,7 @@ class IMP_Hooks
 //        }
 //    }
 
+
     /**
      * AJAX HOOK: Add user-defined AJAX action handlers.
      *
@@ -124,10 +125,42 @@ class IMP_Hooks
 //        throw new Horde_Ajax_Exception('Unknown action');
 //     }
 
+
+    /**
+     * Do MIME type determination for compose attachments.
+     *
+     * @param string $filename  The filename.
+     * @param string $tempfile  The location on the local server of the
+     *                          temporary file that contains the attachment
+     *                          data.
+     * @param string $type      The MIME type as reported by the browser.
+     *
+     * @return string  The MIME type of the file.
+     /
+     function attachmimetype($filename, $tempfile, $type)
+     {
+        /* By default, we trust the MIME type reported by the browser if it is
+         * something other than the generic octet-stream type. */
+        if ($type == 'application/octet-stream') {
+            /* Try to determine the MIME type from 1) analysis of the file
+             * (if available) and, if that fails, 2) from the extension. We
+             * do it in this order here because, most likely, if a browser
+             * can't identify the type of a file, it is because the file
+             * extension isn't available and/or recognized. */
+            $type = Horde_Mime_Magic::analyzeFile($tempfile, !empty($GLOBALS['conf']['mime']['magic_db']) ? $GLOBALS['conf']['mime']['magic_db'] : null);
+            if (!$type) {
+                $type = Horde_Mime_Magic::filenameToMIME($filename, false);
+            }
+        }
+
+        return $type;
+    }
+
+
     /**
      * Perform an action after a message has been sent successfully.
      *
-     * @param Horde_Mime_Part $message  The message content object.
+     * @param Horde_Mime_Part $message     The message content object.
      * @param Horde_Mime_Headers $message  The message headers object.
      */
 //    function postsent($message, $headers)
