@@ -2,6 +2,7 @@
 v5.0-git
 --------
 
+[mms] Add hook to allow determination of compose attachments MIME type.
 [mms] Move AJAX processing framework to Horde (Request #4561).
 [mms] If selected message(s) disappear from mailbox, gracefully handle in the
       user interface (DIMP).
